Revert "fix(css): wrap metrics properly at tablet size (#408)"
This reverts commit 191417b6a803a0720516d618858190d9e556f1e6.

--- a/src/containers/Ledgers/css/ledgerMetrics.scss
+++ b/src/containers/Ledgers/css/ledgerMetrics.scss
@@ -6,6 +6,14 @@
   background: $black;
   text-align: center;
 
+  @include for-size(tablet-landscape-up) {
+    display: flex;
+    width: calc(100% - 124px);
+    justify-content: space-between;
+    padding: 0px 12px;
+    margin: auto;
+  }
+
   @include for-size(desktop-up) {
     display: block;
     max-width: inherit;
